--- a/clinica_online/src/app/pages/seleccion-usuarios/seleccion-usuarios.component.html
+++ b/clinica_online/src/app/pages/seleccion-usuarios/seleccion-usuarios.component.html
@@ -36,9 +36,9 @@
                               color="light"
                               mat-fab
                               class="btn-fav"
-                              title="Descargar detalles de turnos">
+                              title="Detalles"
+                              (click)="crearExcel()">                              
                               <img class="img-btn" src="{{user.imgPerfil}}" alt="imagen"/>
-    
                             </button>
                           </td>
                           <td style="text-transform: upperCase">
