filtro historial academico por especialista desde pac

--- a/clinica_online/src/app/pages/informes/informes.component.html
+++ b/clinica_online/src/app/pages/informes/informes.component.html
@@ -15,7 +15,7 @@
 
                         <div class="col-12">
                             <button class="button-33" role="button" (click)="volver()">
-                                <i class="fa-solid fa-key"></i>
+                                <i class="fa-solid fa-circle-left"></i>
                                 VOLVER
                             </button>
                         </div>
