--- a/clinica_online/src/app/pages/mis-turnos/mis-turnos.component.html
+++ b/clinica_online/src/app/pages/mis-turnos/mis-turnos.component.html
@@ -257,7 +257,7 @@
 </div>
 
 <!-- ################################## MODAL RECHAZAR ################################## -->
-<div class="modal" id="cancelModal">
+<div class="modal" id="rejectModal">
   <div class="modal-dialog">
     <div class="modal-content">
 
@@ -292,7 +292,7 @@
 
 <!-- ################################## MODAL FINALIZAR ################################## -->
 <div class="modal" id="appointmentEndModal">
-  <div class="modal-dialog modal-lg">
+  <div class="modal-dialog modal-xl">
     <div class="modal-content">
 
       <!-- Modal Header -->
@@ -305,51 +305,78 @@
       <div class="modal-body">
         Ingrese una reseña o comentario de la consulta y el diagnóstico realizado.
       </div>
-      <div class="input-group">
-        <div class="input-group-prepend">
-          <span class="input-group-text">Diagnostico</span>
+
+      <form *ngIf="this.formTurno" [formGroup]="formTurno">
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text">Diagnostico</span>
+          </div>
+          <textarea class="form-control" [(ngModel)]="reseniaTurno" formControlName="reseniaTurno"></textarea>
+          <div class="row mt-1">
+            <div class="col-3"> 
+              <label for="altura">Altura (metros) *</label>
+              <input type="number" formControlName="altura" id="altura"  [(ngModel)]="altura" step="0.01" >
+            </div>
+
+            <div class="col-3">
+              <label for="peso">Peso (kg) *</label>
+              <br>
+              <input type="number" id="peso"  [(ngModel)]="peso" step="0.01" formControlName="peso">
+            </div>
+
+            <div class="col-3">
+              <label for="temperatura">Temperatura (C°) *</label>
+              <input type="number" id="temperatura"  [(ngModel)]="temperatura" step="0.01" formControlName="temperatura">
+            </div>
+
+            <div class="col-3">
+              <label for="presion">Presión *</label>
+              <br>
+              <input type="number" id="presion" [(ngModel)]="presion" step="0.01" formControlName="presion">
+            </div>
+          </div>
+
+          <div class="row mt-2">
+
+            <div class="col-4"> 
+              <label for="datoDinamico1">Dato adicional</label>
+              <br>
+              <input formControlName="claveDatoDinamico1" placeholder="Dato" type="text" id="datoDinamico1" [(ngModel)]="claveDatoDinamico1">
+              <input formControlName="valorDatoDinamico1" placeholder="Valor" type="text" id="datoDinamico1" [(ngModel)]="valorDatoDinamico1">
+            </div>
+
+            <div class="col-4" *ngIf="this.claveDatoDinamico1 != '' && this.valorDatoDinamico1 != ''">
+              <label for="datoDinamico2">Dato adicional</label>
+              <br>
+              <input formControlName="claveDatoDinamico2" placeholder="Dato" type="text" id="datoDinamico2" [(ngModel)]="claveDatoDinamico2">
+              <input formControlName="valorDatoDinamico2" placeholder="Valor" type="text" id="datoDinamico2" [(ngModel)]="valorDatoDinamico2">
+            </div>
+
+            <div class="col-4" *ngIf="this.claveDatoDinamico1 != '' && this.valorDatoDinamico1 != '' && this.claveDatoDinamico2 != '' && this.valorDatoDinamico2 != ''  ">
+              <label for="datoDinamico3">Dato adicional</label>
+              <br>
+              <input formControlName="claveDatoDinamico3" placeholder="Dato" type="text" id="datoDinamico3" [(ngModel)]="claveDatoDinamico3">
+              <input formControlName="valorDatoDinamico3" placeholder="Valor" type="text" id="datoDinamico3" [(ngModel)]="valorDatoDinamico3">
+            </div>
+          </div>
+          
+          </div>
+
+        <!-- Modal footer -->
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-primary" data-bs-dismiss="modal"    
+          (click)="finalizarTurno()" [disabled]="this.formTurno.invalid">
+            Confirmar
+          </button>
         </div>
-        <textarea class="form-control" [(ngModel)]="reseniaTurno"></textarea>
-        <div class="row">
-          <div class="col-3"> 
-            <label for="altura">Altura (metros)</label>
-            <input type="number" id="altura" name="altura" [(ngModel)]="altura" step="0.01">
-          </div>
-
-          <div class="col-3">
-            <label for="peso">Peso (kg)</label>
-            <input type="number" id="peso" name="peso" [(ngModel)]="peso" step="0.01">
-          </div>
-
-          <div class="col-3">
-            <label for="temperatura">Temperatura (C°)</label>
-            <input type="number" id="temperatura" name="temperatura" [(ngModel)]="temperatura" step="0.01">
-          </div>
-
-          <div class="col-3">
-            <label for="presion">Presion</label>
-            <input type="number" id="presion" name="presion" [(ngModel)]="presion" step="0.01">
-          </div>
-
-        </div>
-        
-
-
-        </div>
-
-      <!-- Modal footer -->
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary" data-bs-dismiss="modal"    
-        (click)="finalizarTurno()">
-          Confirmar
-        </button>
-      </div>
+    </form>
 
     </div>
   </div>
 </div>
 
-<!-- ################################## CALIFICAR FINALIZAR ################################## -->
+
+<!-- ################################## MODAL CALIFICAR ################################## -->
 <div class="modal" id="scoreModal">
   <div class="modal-dialog">
     <div class="modal-content">
