searchbar mis turnos

--- a/clinica_online/src/app/pages/mis-turnos/mis-turnos.component.html
+++ b/clinica_online/src/app/pages/mis-turnos/mis-turnos.component.html
@@ -37,6 +37,24 @@
                                     Paciente
                                   </button>
                                 </div>
+                                <div class="col-8" *ngIf="this.esPaciente">
+                                  <input
+                                  style="float: right;"
+                                  type="text"
+                                  [(ngModel)]="campoFiltrado"
+                                  (keyup)="buscarTurnoPorCamposEspecialista()"
+                                  placeholder="Búsqueda"
+                                />
+                                </div>
+                                <div class="col-8" *ngIf="this.esEspecialista">
+                                  <input
+                                  style="float: right;"
+                                  type="text"
+                                  [(ngModel)]="campoFiltrado"
+                                  (keyup)="buscarTurnoPorCamposPaciente()"
+                                  placeholder="Búsqueda"
+                                />
+                                </div>
                               </div>
                             </div>
 
