--- a/clinica_online/src/app/pages/mi-perfil/mi-perfil.component.html
+++ b/clinica_online/src/app/pages/mi-perfil/mi-perfil.component.html
@@ -161,7 +161,7 @@
                     <div style="text-align: center;">
                         <span style="font-weight: 700; font-size: 20px;">{{this.user.lastName}}, {{this.user.name}} </span>  
         
-                        <p> {{fechaActual}}</p>
+                        <p> {{fechaActual | longDateEsp}}</p>
         
                         <img [src]='logo' alt="ico" style="width: 120px; border-radius: 50%;">
         
