--- a/clinica_online/src/app/pages/seleccion-usuarios/seleccion-usuarios.component.html
+++ b/clinica_online/src/app/pages/seleccion-usuarios/seleccion-usuarios.component.html
@@ -132,7 +132,7 @@
               <div style="text-align: center;">
                   <span style="font-weight: 700; font-size: 20px;">{{this.pacienteSeleccionado.lastName}}, {{this.pacienteSeleccionado.name}} </span>  
   
-                  <p> {{fechaActual}}</p>
+                  <p> {{fechaActual | longDateEsp}}</p>
   
                   <img [src]='logo' alt="ico" style="width: 120px; border-radius: 50%;">
   
