--- a/clinica_online/src/app/pages/informes/informes.component.html
+++ b/clinica_online/src/app/pages/informes/informes.component.html
@@ -15,7 +15,11 @@
                                     <img src="assets/img/bar.png" class="card-img-top mt-2" alt="turnospordia">
                                     <div class="card-body">
                                       <h5 class="card-title"><strong>Turnos por día</strong></h5>
-                                      <a class="btn btn-primary">VER</a>
+                                      <a class="btn btn-primary"
+                                      data-bs-toggle="modal" data-bs-target="#modalGraficoPorDia"
+                                      (click)="mostrarChartTurnosPorDia()">
+                                        VER
+                                    </a>
                                     </div>
                                 </div>
                             </div>
@@ -24,7 +28,11 @@
                                     <img src="assets/img/piechart.png" class="card-img-top mt-2" alt="graficotorta">
                                     <div class="card-body">
                                       <h5 class="card-title"><strong>Turnos por especialidad</strong></h5>
-                                      <a  class="btn btn-primary">VER</a>
+                                      <a class="btn btn-primary"
+                                      data-bs-toggle="modal" data-bs-target="#modalGraficoPorEspecialidad"
+                                      (click)="mostrarChartTurnosPorEspecialidad()">
+                                        VER
+                                    </a>
                                     </div>
                                 </div>
                             </div>
@@ -36,7 +44,11 @@
                                     <img src="assets/img/medical-history.png" class="card-img-top mt-2" alt="turnosfinalizados">
                                     <div class="card-body">
                                       <h5 class="card-title"><strong>Turnos finalizados por médico</strong></h5>
-                                      <a class="btn btn-primary">VER</a>
+                                      <a class="btn btn-primary"
+                                      data-bs-toggle="modal" data-bs-target="#modalTurnosFinalizados"
+                                      (click)="mostrarChartTurnosFinalizadosPorMedico()">
+                                        VER
+                                    </a>
                                     </div>
                                 </div>
                             </div>
@@ -45,7 +57,11 @@
                                     <img src="assets/img/medical-team.png" class="card-img-top mt-2" alt="turnossolicitados">
                                     <div class="card-body">
                                       <h5 class="card-title"><strong>Turnos solicitados por médico</strong></h5>
-                                      <a class="btn btn-primary">VER</a>
+                                      <a class="btn btn-primary"
+                                      data-bs-toggle="modal" data-bs-target="#modalTurnosSolicitados"
+                                      (click)="mostrarChartTurnosSolicitadosPorMedico()">
+                                        VER
+                                    </a>
                                     </div>
                                 </div>
                             </div>
@@ -67,15 +83,6 @@
                             </div>                           
                         </div>
 
-                        <button (click)="mostrarChartTurnosPorEspecialidad()">piechart</button>
-                        <div class="ct-chart" id="chart" style="height: 50vh"></div>
-
-                        <div class="col-12">
-                            <button class="button-33" role="button" (click)="volver()">
-                                <i class="fa-solid fa-circle-left"></i>
-                                VOLVER
-                            </button>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -83,7 +90,65 @@
     </div>
 </div>
 
-<!-- ################################## MODAL CANCELAR ################################## -->
+<!-- ################################## MODAL GRAFICO POR DIA ################################## -->
+<div class="modal" id="modalGraficoPorDia">
+    <div class="modal-dialog">
+      <div class="modal-content">
+  
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h4 class="modal-title" style="color:rgb(20, 4, 248)">Turnos por día</h4>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+  
+        <!-- Modal body -->
+        <div class="modal-body">
+          <div>
+            <div class="ct-chart" id="chart_dias" style="height: 50vh"></div>
+          </div>
+        </div>
+        
+        <!-- Modal footer -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
+            OK
+          </button>
+        </div>
+  
+      </div>
+    </div>
+</div>
+
+<!-- ################################## MODAL GRAFICO POR ESPECIALIDAD ################################## -->
+<div class="modal" id="modalGraficoPorEspecialidad">
+    <div class="modal-dialog">
+      <div class="modal-content">
+  
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h4 class="modal-title" style="color:rgb(20, 4, 248)">Turnos por especialidad</h4>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+  
+        <!-- Modal body -->
+        <div class="modal-body">
+          <div>
+            <div class="ct-chart" id="chart_especialidades" style="height: 50vh"></div>
+          </div>
+        </div>
+        
+        <!-- Modal footer -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
+            OK
+          </button>
+        </div>
+  
+      </div>
+    </div>
+</div>
+
+<!-- ################################## MODAL LOGS ################################## -->
 <div class="modal" id="logsModal">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -128,4 +193,83 @@
   
       </div>
     </div>
-  </div>
+</div>
+
+<!-- ################################# MODAL GRAFICO TURNOS FINALIZADOS ################################## -->
+<div class="modal" id="modalTurnosFinalizados">
+    <div class="modal-dialog">
+      <div class="modal-content">
+  
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h4 class="modal-title" style="color:rgb(20, 4, 248)">Turnos finalizados por médico</h4>
+          <br>       
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+  
+        <!-- Modal body -->
+        <div class="modal-body">
+
+            <button type="button" class="btn btn-info mb-2" data-bs-dismiss="modal"     
+                (click)="crearPDF('pdf_finalizados')">
+                <i class="fa-solid fa-file-pdf"></i>
+                DESCARGAR PDF
+            </button>
+
+
+            <div id="pdf_finalizados">
+                <br>
+                <small>Turnos finalizados por médico: ultimos siete días.</small>
+                <div>
+                    <div class="ct-chart" id="chart_turnos_finalizados" style="height: 50vh"></div>
+                </div>
+
+            </div>
+    </div>
+        
+        <!-- Modal footer -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
+            OK
+          </button>
+        </div>
+  
+      </div>
+    </div>
+</div>
+
+<!-- ################################# MODAL GRAFICO TURNOS SOLICITADOS ################################## -->
+<div class="modal" id="modalTurnosSolicitados">
+    <div class="modal-dialog">
+      <div class="modal-content">
+  
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h4 class="modal-title" style="color:rgb(20, 4, 248)">Turnos solicitados por médico</h4>
+          <br>
+          <small>Últimos 7 días</small>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+  
+        <!-- Modal body -->
+        <div class="modal-body">
+            <div id="pdf_solicitados">
+                <br>
+                <small>Turnos solicitados por médico: ultimos siete días.</small>
+                <div>
+                  <div class="ct-chart" id="chart_turnos_solicitados" style="height: 50vh"></div>
+                </div>
+    
+            </div>
+        </div>
+        
+        <!-- Modal footer -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
+            OK
+          </button>
+        </div>
+  
+      </div>
+    </div>
+</div>
