--- a/clinica_online/src/app/pages/bienvenida/bienvenida.component.html
+++ b/clinica_online/src/app/pages/bienvenida/bienvenida.component.html
@@ -7,7 +7,7 @@
             <div class="container">
                 <div class="row">
                     <div class="card col-9 offset-1 scale-up-top" style="height: 450px; margin-left: 1em;">
-                        <img class="card-img-top mt-2" [src]="logo" alt="ico" [ngStyle]="{'width':'7.5rem'}">
+                        <img class="card-img-top mt-2" [src]="logo" alt="ico" [ngStyle]="{'width':'7.5rem'}" logo>
                         <div class="card-body">
                           <h2 class="card-title">Clinica OnLine</h2>
                           <p class="card-text" style="font-size: 20px;">
