--- a/clinica_online/src/app/pages/informes/informes.component.html
+++ b/clinica_online/src/app/pages/informes/informes.component.html
@@ -11,7 +11,7 @@
 
                         <div class="row">
                             <div class="col-6">
-                                <div class="card" style="width: 18rem; margin-left: 2em;">
+                                <div class="card" style="width: 18rem; margin-left: 2em;" appCard>
                                     <img src="assets/img/bar.png" class="card-img-top mt-2" alt="turnospordia">
                                     <div class="card-body">
                                       <h5 class="card-title"><strong>Turnos por día</strong></h5>
@@ -24,7 +24,7 @@
                                 </div>
                             </div>
                             <div class="col-6">
-                                <div class="card" style="width: 18rem;">
+                                <div class="card" style="width: 18rem;" appCard>
                                     <img src="assets/img/piechart.png" class="card-img-top mt-2" alt="graficotorta">
                                     <div class="card-body">
                                       <h5 class="card-title"><strong>Turnos por especialidad</strong></h5>
@@ -40,7 +40,7 @@
 
                         <div class="row">
                             <div class="col-6">
-                                <div class="card" style="width: 18rem; margin-left: 2em;">
+                                <div class="card" style="width: 18rem; margin-left: 2em;" appCard>
                                     <img src="assets/img/medical-history.png" class="card-img-top mt-2" alt="turnosfinalizados">
                                     <div class="card-body">
                                       <h5 class="card-title"><strong>Turnos finalizados por médico</strong></h5>
@@ -53,7 +53,7 @@
                                 </div>
                             </div>
                             <div class="col-6">
-                                <div class="card" style="width: 18rem;">
+                                <div class="card" style="width: 18rem;" appCard>
                                     <img src="assets/img/medical-team.png" class="card-img-top mt-2" alt="turnossolicitados">
                                     <div class="card-body">
                                       <h5 class="card-title"><strong>Turnos solicitados por médico</strong></h5>
@@ -69,7 +69,7 @@
                         
                         <div class="row">
                             <div class="col-6 offset-3">
-                                <div class="card" style="width: 18rem;">
+                                <div class="card" style="width: 18rem;" appCard>
                                     <img src="assets/img/log.png" class="card-img-top mt-2" alt="logs">
                                     <div class="card-body">
                                       <h5 class="card-title"><strong>Logs de ingreso</strong></h5>
@@ -161,7 +161,7 @@
   
         <!-- Modal body -->
         <div class="modal-body">
-          <button type="button" class="btn btn-info mb-2" data-bs-dismiss="modal"     
+          <button type="button" [appButton]="'excel'" style="margin-bottom: 2em" data-bs-dismiss="modal"     
                 (click)="crearExcelLogs()">
                 <i class="fa-solid fa-table"></i>
                 EXCEL
