--- a/clinica_online/src/styles.css
+++ b/clinica_online/src/styles.css
@@ -197,3 +197,21 @@ body {
       width: 25em;
     }
   }
+
+  .card-hover {
+    box-shadow: 2 2 10px rgba(0, 0, 0, 0.3);
+    transform: translateY(-3px) scale(1.1);
+  }
+
+  .rotate-effect {
+    animation: rotation 3s linear infinite;
+  }
+  
+  @keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
