--- a/clinica_online/src/app/pages/seleccion-usuarios/seleccion-usuarios.component.css
+++ b/clinica_online/src/app/pages/seleccion-usuarios/seleccion-usuarios.component.css
@@ -99,6 +99,7 @@ h2 {
   touch-action: manipulation;
 }
 
+
 .button-33-deshab {
   background-color: #e24d08;
   border-radius: 10px;
@@ -130,7 +131,7 @@ h2 {
 }
 
 .button-33-new {
-  background-color: #17ad12;
+  background-color: #1dca79;
   border-radius: 10px;
   box-shadow: rgba(31, 10, 124, 0.2) 0 -25px 18px -14px inset,rgba(31, 10, 124, 0.2) 0 1px 2px,rgba(31, 10, 124, 0.2) 0 2px 4px,rgba(31, 10, 124, 0.2) 0 4px 8px,rgba(31, 10, 124, 0.2) 0 8px 16px,rgba(31, 10, 124, 0.2) 0 16px 32px;
   color: rgb(0, 0, 0);
